[package]
name = "talenta"
version = "0.1.0"
authors = ["el7cosmos <el@elabee.me>"]
edition = "2018"
description = "Talenta CLI"
repository = "https://github.com/el7cosmos/talenta"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
confy = "0.4"
dialoguer = "0.6"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"
url = "2.1"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"