[package]
name = "talenta"
version = "0.4.4"
authors = ["el7cosmos <el@elabee.me>"]
edition = "2018"
description = "Talenta CLI"
homepage = "https://crates.io/crates/talenta"
repository = "https://github.com/el7cosmos/talenta"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    ".github/*"
]

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
confy = "0.4"
dialoguer = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
test-case = "1.1"